--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <body>
       <div class="header">
           <h1>GeoQuest</h1>
-          <h2>Connecting people to their local environment!</h2>
+          <h2>Connecting people to their local environment! hell yeah</h2>
           <div class="navigation clearfix">
               <ul>
                   <li><a href="#">Home</a></li>
