added quick access

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <body>
       <div class="header">
           <h1>GeoQuest</h1>
-          <h2>Connecting people to their local environment! hell yeah</h2>
+          <h2>Connecting people to their local environment!</h2>
           <div class="navigation clearfix">
               <ul>
                   <li><a href="#">Home</a></li>
@@ -20,38 +20,32 @@
       </div>
       <div class="container">
           <div class="main-content">
-              <div class="news">
-                  <h2>New Locations Nationwide</h2>
+              <div class="intro">
+                  <h2>Connect - Discover - Learn</h2>
                       <p>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                          Porro nulla tenetur assumenda eligendi repudiandae expedita
-                          minima perferendis, natus voluptatum eius aspernatur dolorum
-                          facere eum quae, enim commodi iure dignissimos molestiae?
-                      </p>
-                      <p>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas
-                          quos odit sit, neque repudiandae, dolore saepe molestias autem
-                          inventore suscipit adipisci earum. Enim debitis dignissimos
-                          distinctio tempora, ullam alias fugiat.
+                        Have you ever wanted to learn more about the environment you live in? The stores aroun you.
+                        What lurks behind the street corners? Well now you can. Introducing GeoQuest, the new way
+                        to explore the world around you. No matter where you go, GeoQuest connects you with local tenants and
+                        past explorers to help your journey. The app is tailored to your preference, favorites and enviornment.
+                        Sign up to get started!
                       </p>
               </div>
-              <div class="featured-products">
-                  <div class="product">
-                      <h3>Product 1</h3>
+              <div class="quickBar">
+                  <div class="quickAccess">
+                      <h3>Quest Search</h3>
                       <p>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                          Incidunt tenetur ullam rem!
+
                       </p>
                   </div>
-                  <div class="product">
-                      <h3>Product 2</h3>
+                  <div class="quickAccess">
+                      <h3>Recent Groups</h3>
                       <p>
                           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                           Tempore delectus minus rerum.
                       </p>
                   </div>
-                  <div class="product">
-                      <h3>Product 3</h3>
+                  <div class="quickAccess">
+                      <h3>Local Map</h3>
                       <p>
                           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                           Assumenda error repellendus ut odit.
@@ -61,29 +55,15 @@
 
           </div>
           <div class="sidebar">
-              <div class="blog-entries">
-                  <h2>Recent Blog Entries</h2>
-                  <ul>
-                      <li><a href="#">Post Title 1</a></li>
-                      <li><a href="#">Post Title 2</a></li>
-                      <li><a href="#">Post Title 3</a></li>
-                      <li><a href="#">Post Title 4</a></li>
-                  </ul>
+              <div class="logIn">
+                  <h2>Log In</h2>
+                  <form class="log" action="index.html" method="post">
+                    Username : <input type="text" size="20px" name="username" /><br>
+                    Password : <input type="text" size="20px" name="password" /><br>
+                  </form>
               </div>
-              <div class="about-us">
-                  <h3>About Us</h3>
-                  <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio
-                      et modi, sed temporibus maiores dignissimos dolor blanditiis
-                      facere qui quod repellendus, minima nulla consequatur tempora
-                      inventore. In sunt est et!
-                  </p>
-                  <p>
-                      Itaque non a provident velit quam saepe fugiat, natus alias,
-                      repellendus porro sit, illum ab. Atque debitis necessitatibus, quo,
-                      molestias nulla minus natus nam inventore sapiente error eaque
-                      aliquam, nesciunt.
-                  </p>
+              <div class="signUp">
+                  <h3>Sign Up Now!</h3>
               </div>
           </div>
       </div>
