--- a/templates/blank.html
+++ b/templates/blank.html
@@ -136,9 +136,10 @@
         </ol>
 
         <!-- Page Content -->
-        <h1>Blank Page</h1>
+        <h1>Nature Lover's Trail</h1>
         <hr>
-        <p>This is a great starting point for new custom pages.</p>
+        <p>This is a great starting point for those who are into the NYC's nature and animal views. From the beautiful Central Park to the
+        cool waters of the Hudson Rivers, this quest allows users to traverse the NYC landscape and experience NYC's biotic and abiotic factors.</p>
 
       </div>
       <!-- /.container-fluid -->
