--- a/templates/blank.html
+++ b/templates/blank.html
@@ -108,7 +108,7 @@
           <div class="dropdown-divider"></div>
           <h6 class="dropdown-header">Other Pages:</h6>
           <a class="dropdown-item" href="404.html">404 Page</a>
-          <a class="dropdown-item active" href="blank.html">Blank Page</a>
+          <a class="dropdown-item active" href="blank.html">QuestBrydge / Nature Lover's Trail</a>
         </div>
       </li>
       <li class="nav-item">
