added all python stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -118,6 +118,12 @@
       </li>
 
       <li class="nav-item">
+        <a class="nav-link" href="/newQuest">
+          <i class="fas fa-fw fa-chart-area"></i>
+          <span> Create New Quest</span></a>
+      </li>
+
+      <li class="nav-item">
         <a class="nav-link" href="/tables">
           <i class="fas fa-fw fa-table"></i>
           <span>Contact Us</span></a>
@@ -162,7 +168,7 @@
                 </div>
                 <div class="mr-5">QuestBrydge</div>
               </div>
-              <a class="card-footer text-white clearfix small z-1" href="/blank">
+              <a class="card-footer text-white clearfix small z-1" href="/viewQuests">
                 <span class="float-left">View Details</span>
                 <span class="float-right">
                   <i class="fas fa-angle-right"></i>
